# Gidex

./: .gitignore  README.md  orgs.toml  pyproject.toml  start  sync.sh
src/: config.py  constants.py  credentials.py  git_operations.py  git_repo.py  git_submodule.py  logger.py  main.py  operations.py  org_loader.py  repo.py  submodule.py
src/git/: credentials.py  operations.py  repo.py  submodule.py
src/utils/: logger.py  org_loader.py
